src/test/resources/public/input/typechecking/pass/pass06.jova
class Object {
}

class Main{

	public int main(){
		Object o1;
		o1 = nix;
	}
}