src/test/resources/public/input/typechecking/fail/unknown_type/fail03.jova
class Main {

   public int func1(Onknown param){
     return 1;
   }
}
